# PocoSample

./: CMakeLists.txt  README.md
App/: CMakeLists.txt
App/source/: Main.cpp
Lib/: CMakeLists.txt
Lib/include/foo/: Foo.h
Lib/source/: Foo.cpp
Test/: CMakeLists.txt
Test/source/: TestFoo.cpp
